Implemented Update Track controller. Simplified Update Project controller so that it no longer requires specific projection logic. Implemented controllers for User Current View, User Mouse, and Chat Message, and added schemas and routes for them. Imported security packages and set up the httpServer module to use them. Created a declaration file for the xss-clean security package and included it in the files property in tsconfig.json.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -31,5 +31,5 @@
 
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"],
-  "files": ["src/types/custom.d.ts"]
+  "files": ["src/types/custom.d.ts", "src/types/xss-clean.d.ts"]
 }
