--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,18 @@
   "dependencies": {
     "aws-jwt-verify": "^4.0.0",
     "aws-sdk": "^2.1525.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "mongoose": "^8.0.3",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.3",
